add: about and how to play combined to allow for new news api structure

--- a/index.html
+++ b/index.html
@@ -85,15 +85,6 @@
                 <div class="col">
                     <h2>About Derby Duel</h2>
                     <p>Derby Duel is a trivia game to test your knowledge on the infamous North London Derby</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="play-section">
-        <div class="container-fluid">
-            <div class="row text-center pt-5 pb-5">
-                <div class="col txt-color-1">
-                    <h2>How to Play</h2>
                     <ul>
                         <li>Answer correctly, goal scored! = <strong>1 point</strong></li>
                         <li>Win a match = <strong>3 points</strong></li>
@@ -108,6 +99,26 @@
                             </ul>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="play-section">
+        <div class="container-fluid">
+            <div class="row text-center pt-5 pb-5">
+                <div class="col txt-color-1">
+                    <h2>Derby Team News</h2>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            temp 1
+                        </div>
+                        <div class="col-12 col-md-4">
+                            temp 2
+                        </div>
+                        <div class="col-12 col-md-4">
+                            temp 3
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -179,6 +190,8 @@
             emailjs.init("lOit3QM5Exl4CLX_f"); //Public Key
         })();
     </script>
+    <!-- game.js Script Tag -->
+    <script defer src="./assets/js/index.js"></script>
     <script src="assets/js/sendEmail.js"></script>
 </body>
 
