--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                 <div class="col txt-color-1">
                     <h2>Derby Team News</h2>
                     <div class="row">
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 news-item" data-news-number="1">
                             temp 1
                         </div>
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 news-item" data-news-number="2">
                             temp 2
                         </div>
-                        <div class="col-12 col-md-4">
+                        <div class="col-12 col-md-4 news-item" data-news-number="3">
                             temp 3
                         </div>
                     </div>
