--- a/index.html
+++ b/index.html
@@ -108,16 +108,8 @@
             <div class="row text-center pt-5 pb-5">
                 <div class="col txt-color-1">
                     <h2>Derby Team News</h2>
-                    <div class="row">
-                        <div class="col-12 col-md-4 news-item" data-news-number="1">
-                            temp 1
-                        </div>
-                        <div class="col-12 col-md-4 news-item" data-news-number="2">
-                            temp 2
-                        </div>
-                        <div class="col-12 col-md-4 news-item" data-news-number="3">
-                            temp 3
-                        </div>
+                    <div class="row" id="news-container">
+                        
                     </div>
                 </div>
             </div>
