style: news items on hover over

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section id="play-section">
         <div class="container-fluid">
             <div class="row text-center pt-5 pb-5">
-                <div class="col txt-color-1">
+                <div class="col">
                     <h2>Derby Team News</h2>
                     <div class="row" id="news-container">
                         
