style: padding and text color for news items

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar fixed-top">
             <div class="container-fluid justify-content-end">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                <button class="navbar-toggler bg-color-3" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
