add: modal.js for modal jquery

--- a/game.html
+++ b/game.html
@@ -251,14 +251,15 @@
 
     <!-- game.js Script Tag -->
     <script defer src="./assets/js/game.js"></script>
-
-    <!-- Show Modal on Page Load -->
+    <script defer src="./assets/js/modal.js"></script>
+    <!-- Show Modal on Page Load 
     <script>
+        
         $(document).ready(function () {
             $("#myModal").modal('show');
         });
     </script>
-
+-->
 </body>
 
 </html>
