fix: game-header to display reduced text on all but xxl screens

--- a/game.html
+++ b/game.html
@@ -108,12 +108,12 @@
                             </div>
                             <div class="col-8">
                                 <div class="row h-50">
-                                    <div class="col-2 border-end border-danger border-1 game-header">P<span class="d-none d-md-inline-block">layed</span></div>
-                                    <div class="col-2 border-end border-danger border-1 game-header">W<span class="d-none d-md-inline-block">on</span></div>
-                                    <div class="col-2 border-end border-danger border-1 game-header">D<span class="d-none d-md-inline-block">rawn</span></div>
-                                    <div class="col-2 border-end border-danger border-1 game-header">L<span class="d-none d-md-inline-block">ost</span></div>
-                                    <div class="col-2 border-end border-danger border-1 game-header">G<span class="d-none d-md-inline-block">oals</span></div>
-                                    <div class="col-2 border-end border-danger border-1 game-header">P<span class="d-none d-md-inline-block">oints</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">P<span class="d-none d-xxl-inline-block">layed</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">W<span class="d-none d-xxl-inline-block">on</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">D<span class="d-none d-xxl-inline-block">rawn</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">L<span class="d-none d-xxl-inline-block">ost</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">G<span class="d-none d-xxl-inline-block">oals</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">P<span class="d-none d-xxl-inline-block">oints</span></div>
                                 </div>
                                 <div class="row h-50">
                                     <div class="col-2 border-end border-danger border-1 game-header" id="played">0</div>
