--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body class="home-page">
+    <!-- Header -->
     <header>
+        <!-- Fixed offcanvas bootstrap navbar within hamburger menu -->
         <nav class="navbar fixed-top">
             <div class="container-fluid justify-content-end">
                 <button class="navbar-toggler bg-color-3" type="button" data-bs-toggle="offcanvas"
@@ -36,7 +38,7 @@
                                 <a class="nav-link" href="#about-section">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#play-section">How to Play</a>
+                                <a class="nav-link" href="#news-section">How to Play</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#form-section">Contact</a>
@@ -47,16 +49,20 @@
             </div>
         </nav>
     </header>
+
+    <!-- Main Area containing title, team logos and button to go to quiz -->
     <section id="main-section">
         <div class="container-fluid">
             <div class="row logo-row text-center align-items-center mb-5">
                 <div class="col-3 col-md-2"></div>
                 <div class="col-3">
+                    <!-- Arsenal logo - Permission obtained from Arsenal Football Club -->
                     <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo"
                         id="arsenal-logo">
                 </div>
                 <div class="d-none d-md-block col-md-2"></div>
                 <div class="col-3">
+                    <!-- Tottenham Hotspurs logo - Permission obtained from Tottenham Hotspurs Football Club -->
                     <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo"
                         id="spurs-logo">
                 </div>
@@ -70,6 +76,7 @@
             </div>
             <div class="row text-center mb-5">
                 <div class="col">
+                    <!-- Button to redirect to quiz page -->
                     <a href="game.html">
                         <button type="button" class="btn btn-primary txt-color-2">
                             Take Quiz
@@ -79,6 +86,9 @@
             </div>
         </div>
     </section>
+
+    <!-- About Derby Duel Section -->
+    <!-- Game play explained-->
     <section id="about-section">
         <div class="container-fluid bg-color-1 txt-color-2 pt-5 pb-5">
             <div class="row text-center">
@@ -103,18 +113,22 @@
             </div>
         </div>
     </section>
-    <section id="play-section">
+
+    <!-- NEWS SECTION -->
+    <!-- News 67 API inserted here via javascript -->
+    <section id="news-section">
         <div class="container-fluid">
             <div class="row text-center pt-5 pb-5">
                 <div class="col">
                     <h2>Derby Team News</h2>
                     <div class="row" id="news-container">
-                        
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- FORM SECTION -->
     <section id="form-section">
         <div class="container-fluid bg-color-1 txt-color-2 pt-5 pb-5">
             <div class="row">
@@ -125,8 +139,10 @@
                 </div>
             </div>
             <div class="row">
+                <!-- Form centered using div's either side on medium and large screens -->
                 <div class="d-none d-md-block col-md-4"></div>
                 <div class="col-12 col-md-4 mt-3">
+                    <!-- EmailJS used to forward form inputs onto site owner -->
                     <form onsubmit="return sendMail(this);">
                         <div class="mb-3">
                             <label for="name" class="form-label">Name:</label>
@@ -142,9 +158,11 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
+                    <!-- Success message displayed via javascript in sendEmail.js if successful -->
                     <div class="col-12 mt-3 bg-color-3 rounded hide" id="success-element">
                         <p class="txt-color-3 p-2">Your message has been sent.</p>
                     </div>
+                    <!-- Failed message displayed via javascript in sendEmail.js if unsuccessful -->
                     <div class="col-12 mt-3 bg-color-3 rounded hide" id="failed-element">
                         <p class="txt-color-3 p-2">There is a problem with your message being sent. Try again later</p>
                     </div>
@@ -153,12 +171,15 @@
             </div>
         </div>
     </section>
+
+    <!-- FOOTER SECTION -->
     <footer>
         <div class="container-fluid">
             <div class="row pt-5 pb-5 txt-color-1">
                 <div class="col-12 col-md-6 mb-2">
                     <p>&copy Abby Humphreys 2023</p>
                 </div>
+                <!-- To comply with usage terms for team logos, this site is for educational purposes only -->
                 <div class="col-12 col-md-6 text-md-end">
                     <p>Site created for educational purposes only</p>
                 </div>
@@ -182,6 +203,7 @@
             emailjs.init("lOit3QM5Exl4CLX_f"); //Public Key
         })();
     </script>
+    
     <!-- game.js Script Tag -->
     <script defer src="./assets/js/index.js"></script>
     <script src="assets/js/sendEmail.js"></script>
