add: additional comments to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="home-page">
-    <!-- Header -->
+    <!-- HEADER -->
     <header>
         <!-- Fixed offcanvas bootstrap navbar within hamburger menu -->
         <nav class="navbar fixed-top">
@@ -38,7 +38,7 @@
                                 <a class="nav-link" href="#about-section">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#news-section">How to Play</a>
+                                <a class="nav-link" href="#news-section">Derby News</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#form-section">Contact</a>
@@ -50,7 +50,8 @@
         </nav>
     </header>
 
-    <!-- Main Area containing title, team logos and button to go to quiz -->
+    <!-- MAIN SECTION -->
+    <!-- contains title, team logos and button to go to quiz -->
     <section id="main-section">
         <div class="container-fluid">
             <div class="row logo-row text-center align-items-center mb-5">
@@ -87,7 +88,7 @@
         </div>
     </section>
 
-    <!-- About Derby Duel Section -->
+    <!-- ABOUT SECTION -->
     <!-- Game play explained-->
     <section id="about-section">
         <div class="container-fluid bg-color-1 txt-color-2 pt-5 pb-5">
@@ -203,7 +204,7 @@
             emailjs.init("lOit3QM5Exl4CLX_f"); //Public Key
         })();
     </script>
-    
+
     <!-- game.js Script Tag -->
     <script defer src="./assets/js/index.js"></script>
     <script src="assets/js/sendEmail.js"></script>
