add: comments to 404.html

--- a/404.html
+++ b/404.html
@@ -140,16 +140,19 @@
                         <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section border-bottom border-1 position-relative">
                             <h3 class="select-answer vertical-center center-text">SELECT YOUR ANSWER</h3>
                         </div>
+                        <!-- Redirect user to home page -->
                         <a href="index.html">
                             <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text hover-color position-relative">
                                 <p class="vertical-center center-text txt-color-2">Go Home</p>
                             </div>
                         </a>
+                        <!-- Redirect user to quiz page -->
                         <a href="game.html">
                             <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text hover-color position-relative">
                                 <p class="vertical-center center-text txt-color-2">Play Quiz</p>
                             </div>
                         </a>
+                        <!-- Redirect user to contact form on home page -->
                         <a href="index.html#form-section">
                             <div class="col-12 ps-2 h-29 choice-text hover-color position-relative">
                                 <p class="vertical-center center-text txt-color-2">Contact Quiz Owner</p>
