fix: button incorporated in anchor link

--- a/index.html
+++ b/index.html
@@ -72,17 +72,13 @@
             <div class="row text-center mb-3">
                 <div class="txt-color-1">
                     <h1>Derby Duel</h1>
-                    <p>So you think you know everything there is </br>to know about the North London Derby?</p>
+                    <p>So you think you know everything there is <br>to know about the North London Derby?</p>
                 </div>
             </div>
             <div class="row text-center mb-5">
                 <div class="col">
                     <!-- Button to redirect to quiz page -->
-                    <a href="game.html">
-                        <button type="button" class="btn btn-primary txt-color-2">
-                            Take Quiz
-                        </button>
-                    </a>
+                    <a href="game.html" class="btn btn-primary txt-color-2" role="button">Take Quiz</a>
                 </div>
             </div>
         </div>
@@ -100,7 +96,7 @@
                         <li>Answer correctly, goal scored! = <strong>1 point</strong></li>
                         <li>Win a match = <strong>3 points</strong></li>
                         <li>Draw a match = <strong>1 point</strong></li>
-                        </br>
+                        <br>
                         <li>Results after 3 matches:</li>
                             <ul>
                                 <li><strong>3 points or less</strong> - relegated!</li>
