fix: validator errors, type attribute removed from script tag

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
                         <li>Answer correctly, goal scored! = <strong>1 point</strong></li>
                         <li>Win a match = <strong>3 points</strong></li>
                         <li>Draw a match = <strong>1 point</strong></li>
-                        <br>
-                        <li>Results after 3 matches:</li>
+                    </ul>
+                    <br>
+                    <ul>
+                        <li>Results after 3 matches:
                             <ul>
                                 <li><strong>3 points or less</strong> - relegated!</li>
                                 <li><strong>4 - 9 points</strong> - Premiership champions!</li>
@@ -174,7 +176,7 @@
         <div class="container-fluid">
             <div class="row pt-5 pb-5 txt-color-1">
                 <div class="col-12 col-md-6 mb-2">
-                    <p>&copy Abby Humphreys 2023</p>
+                    <p>&#169; Abby Humphreys 2023</p>
                 </div>
                 <!-- To comply with usage terms for team logos, this site is for educational purposes only -->
                 <div class="col-12 col-md-6 text-md-end">
@@ -192,10 +194,9 @@
     </script>
 
     <!-- Email JS Script Tag -->
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     </script>
-    <script type="text/javascript">
+    <script>
         (function(){
             emailjs.init("lOit3QM5Exl4CLX_f"); //Public Key
         })();
