fix: validator errors - start quiz id's changed to class

--- a/game.html
+++ b/game.html
@@ -30,8 +30,10 @@
                         <li>Answer correctly, goal scored! = <strong>1 point</strong></li>
                         <li>Win a match = <strong>3 points</strong></li>
                         <li>Draw a match = <strong>1 point</strong></li>
-                        </br>
-                        <li>Results after 3 matches:</li>
+                    </ul>
+                    <br>
+                    <ul>
+                        <li>Results after 3 matches:
                             <ul>
                                 <li><strong>3 points or less</strong> - relegated!</li>
                                 <li><strong>4 - 9 points</strong> - Premiership champions!</li>
@@ -65,7 +67,7 @@
                         <div class="col-6 team-selector" id="modal-arsenal-logo">
                             <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip"
                                 data-bs-title="Disabled tooltip">
-                                <button type="button" class="btn" id="start-quiz" data-bs-dismiss="modal">
+                                <button type="button" class="btn start-quiz" data-bs-dismiss="modal">
                                     <img class="img-fluid" src="assets/images/arsenal-logo.webp"
                                         alt="Arsenal football team logo" id="modal-arsenal-image">
                                 </button>
@@ -75,7 +77,7 @@
                         <div class="col-6 team-selector" id="modal-spurs-logo">
                             <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip"
                                 data-bs-title="Disabled tooltip">
-                                <button type="button" class="btn" id="start-quiz" data-bs-dismiss="modal">
+                                <button type="button" class="btn start-quiz" data-bs-dismiss="modal">
                                     <img class="img-fluid" src="assets/images/spurs-logo.webp"
                                         alt="Tottenham Hotspurs team logo" id="modal-spurs-image">
                                 </button>
@@ -259,7 +261,7 @@
             <div class="container-fluid">
                 <div class="row pt-5 pb-5 txt-color-1">
                     <div class="col-12 col-md-6 mb-2">
-                        <p>&copy Abby Humphreys 2023</p>
+                        <p>&#169; Abby Humphreys 2023</p>
                     </div>
                     <div class="col-12 col-md-6 text-md-end">
                         <p>Site created for educational purposes only</p>
