fix: validator error - semicolon after copyright symbol

--- a/404.html
+++ b/404.html
@@ -166,7 +166,7 @@
             <div class="container-fluid">
                 <div class="row pt-5 pb-5 txt-color-1">
                     <div class="col-12 col-md-6 mb-2">
-                        <p>&copy Abby Humphreys 2023</p>
+                        <p>&#169; Abby Humphreys 2023</p>
                     </div>
                     <div class="col-12 col-md-6 text-md-end">
                         <p>Site created for educational purposes only</p>
