fix: validator error - button converted to anchor link

--- a/end.html
+++ b/end.html
@@ -152,11 +152,7 @@
                         <h3 id="result-exclamation">Oops!</h3>
                         <p>You scored <span id="end-points">12</span> points</p>
                         <p id="result-paragraph">You have been relagated to league one</p>
-                        <a href="game.html">
-                            <button type="button" class="btn btn-primary txt-color-2 end-btn">
-                                Re-take Quiz
-                            </button>
-                        </a>
+                        <a href="game.html" class="btn btn-primary txt-color-2 end-btn" role="button">Re-take Quiz</a>
                     </div>
                 </div>
             </div>
@@ -167,7 +163,7 @@
             <div class="container-fluid">
                 <div class="row pt-5 pb-5 txt-color-1">
                     <div class="col-12 col-md-6 mb-2">
-                        <p>&copy Abby Humphreys 2023</p>
+                        <p>&#169; Abby Humphreys 2023</p>
                     </div>
                     <div class="col-12 col-md-6 text-md-end">
                         <p>Site created for educational purposes only</p>
