fix: aria labelled by corrected

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Fixed offcanvas bootstrap navbar within hamburger menu -->
         <nav class="navbar fixed-top">
             <div class="container-fluid justify-content-end">
-                <button class="navbar-toggler bg-color-3" type="button"  aria-label="open navbar" aria-labelledby="hamburger menu" alt="navigation hambuger menu" data-bs-toggle="offcanvas"
+                <button class="navbar-toggler bg-color-3" type="button"  aria-label="open navbar" aria-labelledby="offcanvasNavbarLabel" alt="navigation hambuger menu" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
