add: home page redirect from derby duel title

--- a/game.html
+++ b/game.html
@@ -218,7 +218,9 @@
                                 </div>
                             </div>
                             <div class="d-none d-md-inline-block col-3 border-start border-danger border-3 position-relative">
-                                <h6 class="d-inline pe-2 game-header vertical-center center-text title">Derby Duel</h6>
+                                <a href="index.html">
+                                    <h6 class="d-inline pe-2 game-header vertical-center center-text title">Derby Duel</h6>
+                                </a>
                             </div>
                         </div>
                     </div>
