fix: 404 error page contact site owner box updated

--- a/404.html
+++ b/404.html
@@ -154,8 +154,8 @@
                                 <p class="vertical-center center-text txt-color-2">Play Quiz</p>
                             </div>
                         </a>
-                        <!-- Redirect user to contact form on home page -->
-                        <a href="index.html#form-section">
+                        <!-- Redirect user to email site owner -->
+                        <a href=mailto:“bibby3316@gmail.com” target="_blank">
                             <div class="col-12 ps-2 h-29 choice-text hover-color position-relative">
                                 <p class="vertical-center center-text txt-color-2">Contact Quiz Owner</p>
                             </div>
