--- a/game.html
+++ b/game.html
@@ -105,7 +105,7 @@
             <div class="toast-body vertical-center center-text">
                 <span id="match-quote">Take a bow, son!</span>
                 <p class="fs-3 txt-color-3">You <span id="toast-body-result">won/lost</span> match <span id="toast-body-match">2</span></p>
-                <button type="button" class="btn btn-primary txt-color-2 mt-5" data-bs-dismiss="toast" aria-label="Close">Next Match</button>
+                <button type="button" class="btn btn-primary txt-color-2 mt-5"  id="toast-button" data-bs-dismiss="toast" aria-label="Close">Next Match</button>
             </div>
         </div>
     </div>
